chore: preview test

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
   <main class="container" role="main">
     <h1>Guess the player from their clubs</h1>
-    <p>Say your guess out loud. Then reveal.</p>
+    <p>Say your guess out loud. Then reveal. (Preview test)</p>
 
     <ol id="clubs" aria-live="polite"></ol>
 
