--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,14 @@
     p { margin: 0 0 12px; color: var(--muted); }
     ol#clubs { margin: 12px 0 0; padding-left: 1.25rem; }
     li { padding: 4px 0; }
+    .club-badge {
+      display: inline-block;
+      padding: 4px 8px;
+      border-radius: 9999px;
+      background: var(--card);
+      color: var(--fg);
+      margin: 4px;
+    }
     .controls { display: flex; gap: 10px; margin-top: 16px; }
     button { 
       appearance: none; border: 0; cursor: pointer; font-weight: 700; 
