Center club list

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,12 @@
     }
     h1 { font-size: 1.25rem; margin: 0 0 10px; letter-spacing: .3px; }
     p { margin: 0 0 12px; color: var(--muted); }
-    ol#clubs { margin: 12px 0 0; padding-left: 1.25rem; }
+    ol#clubs {
+      margin: 12px 0 0;
+      padding-left: 0;
+      text-align: center;
+      list-style: none;
+    }
     li { padding: 4px 0; }
     .club-badge {
       display: inline-block;
