Tweak layout and styling for club badges

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       --card: var(--card-dark);
       --container-bg: var(--container-dark);
       --container-shadow: var(--shadow-dark);
+      --badge-bg: rgba(59, 130, 246, 0.2);
+      --badge-border: rgba(59, 130, 246, 0.55);
+      --badge-fg: var(--fg-dark);
     }
     body.theme-light {
       --bg: var(--bg-light);
@@ -50,6 +53,9 @@
       --card: var(--card-light);
       --container-bg: var(--container-light);
       --container-shadow: var(--shadow-light);
+      --badge-bg: rgba(59, 130, 246, 0.12);
+      --badge-border: rgba(99, 102, 241, 0.4);
+      --badge-fg: var(--accent-secondary);
     }
     .container {
       width: 100%;
@@ -78,13 +84,23 @@
     li { padding: 4px 0; }
     .club-badge {
       display: inline-block;
-      padding: 4px 8px;
+      padding: 6px 14px;
       border-radius: 9999px;
-      background: var(--card);
-      color: var(--fg);
-      margin: 4px;
+      background: var(--badge-bg);
+      border: 1px solid var(--badge-border);
+      color: var(--badge-fg);
+      margin: 6px;
+      font-weight: 600;
+      letter-spacing: .2px;
     }
-    .controls { display: flex; gap: 10px; margin-top: 16px; }
+    .controls {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
     button {
       appearance: none; border: 0; cursor: pointer; font-weight: 700;
       padding: 12px 16px; border-radius: 12px;
@@ -103,7 +119,6 @@
     }
     body.theme-dark .theme-toggle { border-color: rgba(255, 255, 255, 0.12); }
     #answer { display: none; font-weight: 800; margin-top: 12px; font-size: 1.1rem; }
-    .footer { margin-top: 16px; font-size: .9rem; color: var(--muted); }
   </style>
 </head>
 <body class="theme-dark">
@@ -112,8 +127,6 @@
       <h1>Guess the player from their clubs</h1>
       <button id="theme-toggle" type="button" class="theme-toggle" aria-label="Switch to light theme">Switch to light theme</button>
     </div>
-    <p>Say your guess out loud. Then reveal. (Preview test)</p>
-
     <ol id="clubs" aria-live="polite"></ol>
 
     <div id="answer" aria-live="polite"></div>
@@ -122,8 +135,6 @@
       <button id="reveal" type="button" aria-controls="answer">Reveal player</button>
       <button id="next" type="button" class="secondary">Next player</button>
     </div>
-
-    <div class="footer">Tip: add your own data in <code>data/players.json</code>.</div>
   </main>
 
   <script src="app.js" defer></script>
