--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
       letter-spacing: .2px;
       margin: 6px;
     }
-    .controls { display: flex; gap: 10px; margin-top: 16px; }
+    .controls {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 16px;
+    }
     button {
       appearance: none; border: 0; cursor: pointer; font-weight: 700;
       padding: 12px 16px; border-radius: 12px;
